# ChangeLog of Nadoka($Rev$)
# $Id$ 

2009-07-04  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/dictbot.nb: avoid nkf bug.
	add waei as w, ruigo as r.
	new yahoo dict URI. (apply patch from ko1_ndk)

	* plugins/googlebot.nb: quote splited words. (apply patch from ko1_ndk)

2009-07-01  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* rice/irc.rb: @conn[0] may be nil.

2009-05-25  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ndk/config.rb, ndk/server.rb: add Primitive_Filter
	  to filter any commands. (apply patch from unak)

2009-05-20  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/identifynickserv.nb: added.

2009-05-20  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ndk/bot.rb, ndk/server.rb: add on_server_connected.

2009-04-16  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* nadokarc, ndk/config.rb, ndk/server.rb, rice/irc.rb: support SSL.

Wed Mar 19 19:46:52 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ndk/logger.rb : pass ch to msgobj from clog.

	* ndk/config.rb : unify safe channel log filename.

Mon Jul 23 01:07:08 2007  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* lib/rss_check.rb : bug fix when dc_date is nil.

	* ndk/config.rb : fix bug when non-Hash in BotConfig array.


Mon Jul 02 19:01:04 2007  Koichi Sasada  <ko1@atdot.net>

	* plugins/tenkibot.nb : fix output format detail.

	* plugins/googlebot.nb : fix to retry 5 times if error is
          occurred while google search.

	* plugins/dictbot.nb : fix to show short summary.


2007-07-02(Mon) 18:01:58 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* rice/irc.rb : allow trailing "." in HOSTNAME (for NickServ
	on Freenode)


2007-02-20(Tue) 23:35:41 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* **/*.rb, plugins/*.nb : fix typos


2006-10-28(Sat) 22:08:11 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* ndk/server_state.rb : fix bug on_mode after server split


2006-10-20(Fri) 22:22:07 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* ndk/bot.rb : new method ccn2rcn

